--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Ticketbox</title>
   <link rel="stylesheet" type="text/css" href="./css/reset.css">
-  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
