--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
       <div class="form-row vertical agreement checkbox">
         <fieldset>
           <legend>Purchase Agreement</legend>
-          <p>I, {{ fullName }}, wish to buy {{ ticketDescription }}. I understand that all ticket sales are final.</p>
+          <p>I, <span id="full-name">{{ fullName }}</span>, wish to buy <span id="ticket-description">{{ ticketDescription }}</span>. I understand that all ticket sales are final.</p>
+
           <input type="checkbox" name="agreement" id="agree" />
           <label for="agree">I Agree</label>
         </fieldset>
