--- a/index.html
+++ b/index.html
@@ -16,83 +16,83 @@
       <h1>TICKETBOX</h1>
     </header>
     <form>
-      <div class="form-row">
-        <div class="form-field">
-          <label for="first-name">First Name</label>
-          <input type="text" id="first-name" />
-        </div>
-        <div class="form-field">
-          <label for="last-name">Last Name</label>
-          <input type="text" id="last-name" />
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-field">
-          <label for="email">Email</label>
-          <input type="text" id="email" />
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-field">
-          <label for="ticket-quantity">Ticket Quantity</label>
-          <select id="ticket-quantity">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-          </select>
-        </div>
-        <div class="form-field">
-          <legend>Ticket Type</legend>
-          <div>
-            <input type="radio" id="general" value="general">
-            <label for="general">General Admission</label>
-          </div>
-          <div>
-            <input type="radio" id="vip" value="vip">
-            <label for="vip">VIP</label>
-          </div>
-        </div>
-      </div>
-      <div class="form-row checkbox">
-        <fieldset>
-          <legend>How did you hear about this event?</legend>
-          <div>
-            <input type="checkbox" id="friend" value="friend">
-            <label for="friend">Friend</label>
-          </div>
-          <div>
-            <input type="checkbox" id="publication" value="publication">
-            <label for="publication">Publication</label>
-          </div>
-          <div>
-            <input type="checkbox" id="social-media" value="social">
-            <label for="social-media">Social Media</label>
-          </div>
-        </fieldset>
-      </div>
-      <div class="form-row vertical">
-        <label for="requests">Special requests</label>
-        <textarea id="requests" ></textarea>
-      </div>
-      <div class="form-row vertical agreement checkbox">
-        <fieldset>
-          <legend>Purchase Agreement</legend>
-          <p>I, <span id="full-name">{{ fullName }}</span>, wish to buy <span id="ticket-description">{{ ticketDescription }}</span>. I understand that all ticket sales are final.</p>
-
-          <input type="checkbox" name="agreement" id="agree" />
-          <label for="agree">I Agree</label>
-        </fieldset>
-      </div>
-      <div class="form-row vertical">
-        <label for="signature">Signature</label>
-        <input id="signature" class="signature" />
+  <div class="form-row">
+    <div class="form-field">
+      <label for="first-name">First Name</label>
+      <input type="text" id="first-name" v-model="firstName" />
+    </div>
+    <div class="form-field">
+      <label for="last-name">Last Name</label>
+      <input type="text" id="last-name" v-model="lastName" />
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-field">
+      <label for="email">Email</label>
+      <input type="text" id="email" v-model="email" />
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-field">
+      <label for="ticket-quantity">Ticket Quantity</label>
+      <select id="ticket-quantity" v-model="ticketQuantity">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+      </select>
+    </div>
+    <div class="form-field">
+      <legend>Ticket Type</legend>
+      <div>
+        <input type="radio" id="general" value="general" v-model="ticketType">
+        <label for="general">General Admission</label>
       </div>
       <div>
-        <button type="reset" class="reset">Reset</button>
-        <button type="submit">Confirm Tickets</button>
+        <input type="radio" id="vip" value="vip" v-model="ticketType">
+        <label for="vip">VIP</label>
       </div>
-    </form>
+    </div>
+  </div>
+  <div class="form-row checkbox">
+    <fieldset>
+      <legend>How did you hear about this event?</legend>
+      <div>
+        <input type="checkbox" id="friend" value="friend" v-model="referrals">
+        <label for="friend">Friend</label>
+      </div>
+      <div>
+        <input type="checkbox" id="publication" value="publication" v-model="referrals">
+        <label for="publication">Publication</label>
+      </div>
+      <div>
+        <input type="checkbox" id="social-media" value="social" v-model="referrals">
+        <label for="social-media">Social Media</label>
+      </div>
+    </fieldset>
+  </div>
+  <div class="form-row vertical">
+    <label for="requests">Special requests</label>
+    <textarea id="requests" v-model="specialRequests"></textarea>
+  </div>
+  <div class="form-row vertical agreement checkbox">
+    <fieldset>
+      <legend>Purchase Agreement</legend>
+      <p>I, <span id="full-name">{{ fullName }}</span>, wish to buy <span id="ticket-description">{{ ticketDescription }}</span>. I understand that all ticket sales are final.</p>
+      <input type="checkbox" name="agreement" id="agree" v-model="purchaseAgreementSigned" />
+      <label for="agree">I Agree</label>
+    </fieldset>
+  </div>
+  <div class="form-row vertical">
+    <label for="signature">Signature</label>
+    <input id="signature" class="signature" />
+  </div>
+  <div>
+    <button type="reset" class="reset" @click="resetFields">Reset</button>
+    <button type="submit">Confirm Tickets</button>
+  </div>
+</form>
+
   </div>
 </body>
 </html>
